[package]
name = "cubecl-ndfft"
version = "0.1.0"
edition = "2024"

[dependencies]
# cubecl = { path = "../cubecl_upstream/crates/cubecl" }
# cubecl-runtime = { path = "../cubecl_upstream/crates/cubecl-runtime" }
cubecl = { git = "https://github.com/tracel-ai/cubecl", rev = "3770b479" }
cubecl-runtime = { git = "https://github.com/tracel-ai/cubecl", rev = "3770b479" }
bytemuck = { version = "1", features = ["derive"] }
num-complex = "0.4" # optional, for host-side interop
serde = { version = "1.0.221", features = ["derive"] }
rustfft = "6.4.0"
rand = "0.9.2"
rayon = "1.11.0"
ndarray = "0.16.1"
ndrustfft = "0.5.0"
slow_primes = "0.1.14"

[features]
default = ["wgpu", "cuda"]
# Pick one or many runtimes. E.g.:
# cuda = ["cubecl/cuda", "cubecl-runtime/cuda"]
wgpu = ["cubecl/wgpu"]
cuda = ["cubecl/cuda"]
# wgpu = ["cubecl/wgpu", "cubecl-runtime/wgpu"]
# rocm = ["cubecl/rocm", "cubecl-runtime/rocm"]
