[package]
name = "cubecl-ndfft"
version = "0.1.0"
edition = "2024"

[dependencies]
# cubecl = { path = "../cubecl_upstream/crates/cubecl" }
# cubecl-runtime = { path = "../cubecl_upstream/crates/cubecl-runtime" }
# cubecl = { git = "https://github.com/tracel-ai/cubecl", rev = "7e3d7cb84b2c764d43477f7f890e4b9afe1102fe" }
# cubecl-runtime = { git = "https://github.com/tracel-ai/cubecl", rev = "7e3d7cb84b2c764d43477f7f890e4b9afe1102fe" }
cubecl = { git = "https://github.com/tracel-ai/cubecl", rev = "3770b479" }
cubecl-runtime = { git = "https://github.com/tracel-ai/cubecl", rev = "3770b479" }
bytemuck = { version = "1", features = ["derive"] }
num-complex = "0.4" # optional, for host-side interop
serde = { version = "1.0.221", features = ["derive"] }
rustfft = "6.4.0"
rand = "0.9.2"
rayon = "1.11.0"
ndarray = "0.16.1"
ndrustfft = "0.5.0"
slow_primes = "0.1.14"

[features]
default = ["wgpu", "cuda"]
# Pick one or many runtimes. E.g.:
wgpu = ["cubecl/wgpu"]
cuda = ["cubecl/cuda"]
cpu = ["cubecl/cpu"]
